force-app/main/default/objects/Card__c/fields/Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Holder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <type>Lookup</type>
</CustomField>