force-app/main/default/objects/Card__c/fields/Date_of_Redemption__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Redemption__c</fullName>
    <label>Date of Redemption</label>
    <type>Date</type>
</CustomField>