force-app/main/default/objects/Card__c/fields/Offer_Voucher_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Offer_Voucher_Redeemed__c</fullName>
    <label>Offer/Voucher Redeemed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>