force-app/main/default/objects/Card__c/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Authorised</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>