force-app/main/default/objects/Card__c/fields/Redeemed_for_Which_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Redeemed_for_Which_Merchant__c</fullName>
    <label>Redeemed for Which Merchant</label>
    <length>10</length>
    <type>Text</type>
</CustomField>