force-app/main/default/objects/Card__c/fields/View_Card_Data__c.field-meta.xml
<CustomField>
    <fullName>View_Card_Data__c</fullName>
    <formula>IF(ISPICKVAL($User.UserType ,&apos;Standard&apos;) , HYPERLINK(&quot;/lightning/cmp/c__IFB_ViewPrimeDetail?c__recordId=&quot;+Id+&quot;&amp;c__sn=&quot;+Name,&quot;View Card Data&quot;,&quot;_self&quot;), IF(ISPICKVAL( $User.UserType ,&apos;PowerPartner&apos;), HYPERLINK(&quot;/MyFirstBuddy/s/creditcarddetails?c__recordId=&quot;+Id+&quot;&amp;c__sn=&quot;+Name,&quot;View Card Data&quot;,&quot;_self&quot;),&apos;&apos;))</formula>
    <label>View Card Data</label>
    <type>Text</type>
</CustomField>